# CliperAi-

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  cliper.py  pyproject.toml  readmemac.md  rover.json  setup.py
config/: app_settings.json
docs/: ARCHITECTURE.md  GETTING_STARTED.md  config.md  idea.md  idea2.md  textual_migration_plan.md  todo.md  v1_functionality.md  v2_functionality.md
docs/func/: ai_copy_generation.md  cleanup_utilities.md  cli_workflow.md  clip_generation.md  configuration.md  core_pipeline.md  data_flow.md  dependencies.md  development_notes.md  error_handling.md  face_tracking.md  future_enhancements.md  prompt_system.md  speech_edge_clip.md  state_management.md  subtitle_generation.md  transcription.md  video_download.md  video_export.md
src/: cleanup_manager.py  clips_generator.py  copys_generator.py  downloader.py  reframer.py  speech_edge_clip.py  subtitle_generator.py  transcriber.py  video_exporter.py
src/config/: settings_schema.py
src/core/: dependency_manager.py  events.py  job_runner.py  models.py
src/models/: copy_schemas.py
src/prompts/: __init__.py  base_prompts.py  classifier_prompt.py  educational_prompt.py  storytelling_prompt.py  viral_prompt.py
src/tui/: app.py  setup_wizard.py
src/utils/: __init__.py  logger.py  logo.py  open_path.py  state_manager.py  video_namer.py  video_registry.py
tests/: conftest.py  diagnose_subtitle_duplication.py  diagnose_subtitles.py  spike_face_reframing.py  spike_ffmpeg_subprocess.py  test_audio_mapping.py  test_cleaner_exhaustive.py  test_cleanup_manager.py  test_clips_generator.py  test_copy_generation_full.py  test_copy_generation_parts.py  test_copy_schemas.py  test_copys_generator.py  test_core_events.py  test_core_models.py  test_dependencies_paso3.py  test_dependency_manager_idempotency.py  test_downloader.py  test_gemini_api.py  test_job_runner.py  test_logo.py  test_logo_scale_filtergraph.py  test_logo_subtitles_regression.py  test_prompts.py  test_real_subtitle_bug.py  test_reframer.py  test_settings_schema.py  test_speech_aware_trimming.py  test_state_manager.py  test_subtitle_filter_complex.py  test_subtitle_generator.py  test_transcriber.py  test_tui_settings_modal_layout.py  test_tui_setup_wizard.py  test_tui_video_features.py  test_video_exporter.py  test_video_utils.py
todo/: README.md  speech-aware-trimming.md
