[project]
name = "cliper"
version = "1.1.0"
description = "Herramienta para convertir videos largos en clips cortos usando ClipsAI"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "clipsai",
    "whisperx @ git+https://github.com/m-bain/whisperx.git",
    "yt-dlp",
    "python-dotenv",
    "loguru",
    "typer",
    "tqdm",
    "pydantic",
    "ffmpeg-python",
    "rich>=14.2.0",
    "textual>=0.80.0",
    "faster-whisper>=1.2.0",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.11",
]

[project.optional-dependencies]
reframing = [
    # Face reframing (PASO3)
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "bump2version>=1.0.1",
    "textual-dev>=1.7.0",
]

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    ".venv/",
]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument (common in Typer/FastAPI)
    "B905",   # zip without explicit strict
    "SIM108", # ternary operator (sometimes less readable)
    "RUF012", # mutable class attrs - too noisy with Textual widgets
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "E402", "F841", "RUF043", "RUF059"]  # relaxed for tests
"tests/diagnose_*.py" = ["F541", "F401"]  # diagnostic scripts
"tests/spike_*.py" = ["UP006", "UP035"]   # prototype scripts
"src/prompts/*" = ["E501"]
"src/tui/*" = ["E402"]      # conditional imports after path setup
"src/reframer.py" = ["E402"] # conditional import for mediapipe

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "src/*/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 0  # Set to desired threshold (e.g., 80) when ready
